@@ -25,7 +25,7 @@ import controllers.iop.collaboration.api.CollaborativeExamLoader;
 import controllers.iop.transfer.api.ExternalReservationHandler;
 import exceptions.NotFoundException;
 import impl.EmailComposer;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.ExpressionList;
 import io.ebean.FetchConfig;
 import io.ebean.Query;
@@ -71,15 +71,18 @@ public class ReservationController extends BaseController {
 
     @Authenticated
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
-    public Result getExams(Http.Request request) {
+    public Result getExams(Http.Request request, Optional<String> filter) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         PathProperties props = PathProperties.parse("(id, name)");
-        Query<Exam> q = Ebean.createQuery(Exam.class);
+        Query<Exam> q = DB.createQuery(Exam.class);
         props.apply(q);
         ExpressionList<Exam> el = q
             .where()
             .isNull("parent") // only Exam prototypes
             .eq("state", Exam.State.PUBLISHED);
+        if (filter.isPresent()) {
+            el = el.ilike("name", String.format("%%%s%%", filter.get()));
+        }
         if (user.hasRole(Role.Name.TEACHER)) {
             el =
                 el
@@ -91,12 +94,13 @@ public class ReservationController extends BaseController {
                     .eq("shared", true)
                     .endJunction();
         }
-        return ok(el.findList(), props);
+        List<Exam> exams = el.findList();
+        return ok(exams, props);
     }
 
     @Restrict({ @Group("ADMIN") })
     public Result getExamRooms() {
-        List<ExamRoom> examRooms = Ebean.find(ExamRoom.class).select("id, name").fetch("examMachines", "id").findList();
+        List<ExamRoom> examRooms = DB.find(ExamRoom.class).select("id, name").fetch("examMachines", "id").findList();
         return ok(examRooms);
     }
 
@@ -119,15 +123,23 @@ public class ReservationController extends BaseController {
     }
 
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
-    public Result getStudents() {
-        List<User> students = Ebean.find(User.class).where().eq("roles.name", "STUDENT").findList();
+    public Result getStudents(Optional<String> filter) {
+        ExpressionList<User> el = DB.find(User.class).where().eq("roles.name", "STUDENT");
+        if (filter.isPresent()) {
+            el = el.or().ilike("userIdentifier", String.format("%%%s%%", filter.get()));
+            el = applyUserFilter(null, el, filter.get()).endOr();
+        }
+        List<User> students = el.findList();
         return ok(Json.toJson(asJson(students)));
     }
 
     @Restrict({ @Group("ADMIN") })
-    public Result getTeachers() {
-        List<User> teachers = Ebean.find(User.class).where().eq("roles.name", "TEACHER").findList();
-
+    public Result getTeachers(Optional<String> filter) {
+        ExpressionList<User> el = DB.find(User.class).where().eq("roles.name", "TEACHER");
+        if (filter.isPresent()) {
+            el = applyUserFilter(null, el.or(), filter.get()).endOr();
+        }
+        List<User> teachers = el.findList();
         return ok(Json.toJson(asJson(teachers)));
     }
 
@@ -136,13 +148,13 @@ public class ReservationController extends BaseController {
         DynamicForm df = formFactory.form().bindFromRequest(request);
         String msg = df.get("msg");
 
-        ExamEnrolment enrolment = Ebean.find(ExamEnrolment.class).where().eq("reservation.id", id).findOne();
+        ExamEnrolment enrolment = DB.find(ExamEnrolment.class).where().eq("reservation.id", id).findOne();
 
         if (enrolment == null) {
             throw new NotFoundException(String.format("No reservation with id %d for current user.", id));
         }
 
-        ExamParticipation participation = Ebean
+        ExamParticipation participation = DB
             .find(ExamParticipation.class)
             .where()
             .eq("exam", enrolment.getExam())
@@ -155,7 +167,7 @@ public class ReservationController extends BaseController {
         }
 
         Reservation reservation = enrolment.getReservation();
-        // Lets not send emails about historical reservations
+        // Let's not send emails about historical reservations
         if (reservation.getEndAt().isAfter(DateTime.now())) {
             User student = enrolment.getUser();
             emailComposer.composeReservationCancellationNotification(student, reservation, msg, false, enrolment);
@@ -173,12 +185,12 @@ public class ReservationController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result findAvailableMachines(Long reservationId) throws ExecutionException, InterruptedException {
-        Reservation reservation = Ebean.find(Reservation.class, reservationId);
+        Reservation reservation = DB.find(Reservation.class, reservationId);
         if (reservation == null) {
             return notFound();
         }
         PathProperties props = PathProperties.parse("(id, name)");
-        Query<ExamMachine> query = Ebean.createQuery(ExamMachine.class);
+        Query<ExamMachine> query = DB.createQuery(ExamMachine.class);
         props.apply(query);
 
         List<ExamMachine> candidates = query
@@ -205,7 +217,7 @@ public class ReservationController extends BaseController {
     @Restrict({ @Group("ADMIN") })
     public Result updateMachine(Long reservationId, Http.Request request)
         throws ExecutionException, InterruptedException {
-        Reservation reservation = Ebean.find(Reservation.class, reservationId);
+        Reservation reservation = DB.find(Reservation.class, reservationId);
 
         if (reservation == null) {
             return notFound();
@@ -213,7 +225,7 @@ public class ReservationController extends BaseController {
         DynamicForm df = formFactory.form().bindFromRequest(request);
         Long machineId = Long.parseLong(df.get("machineId"));
         PathProperties props = PathProperties.parse("(id, name, room(id, name))");
-        Query<ExamMachine> query = Ebean.createQuery(ExamMachine.class);
+        Query<ExamMachine> query = DB.createQuery(ExamMachine.class);
         props.apply(query);
         ExamMachine previous = reservation.getMachine();
         ExamMachine machine = query.where().idEq(machineId).findOne();
@@ -260,13 +272,13 @@ public class ReservationController extends BaseController {
         Optional<String> end,
         Http.Request request
     ) {
-        ExpressionList<ExamEnrolment> query = Ebean
+        ExpressionList<ExamEnrolment> query = DB
             .find(ExamEnrolment.class)
             .fetch("user", "id, firstName, lastName, email, userIdentifier")
             .fetch("exam", "id, name, state, trialCount, implementation")
             .fetch("exam.course", "code")
-            .fetch("exam.examOwners", "id, firstName, lastName", new FetchConfig().query())
-            .fetch("exam.parent.examOwners", "id, firstName, lastName", new FetchConfig().query())
+            .fetch("exam.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
+            .fetch("exam.parent.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
             .fetch("exam.examInspections.user", "id, firstName, lastName")
             .fetch("examinationEventConfiguration.examinationEvent")
             .where()
@@ -289,18 +301,12 @@ public class ReservationController extends BaseController {
         }
 
         if (state.isPresent()) {
-            switch (state.get()) {
-                case "NO_SHOW":
-                    query = query.eq("noShow", true);
-                    break;
-                case "EXTERNAL_UNFINISHED":
-                case "EXTERNAL_FINISHED":
-                    query = query.isNull("id"); // Deliberately force an empty result set
-                    break;
-                default:
-                    query = query.eq("exam.state", Exam.State.valueOf(state.get())).eq("noShow", false);
-                    break;
-            }
+            query =
+                switch (state.get()) {
+                    case "NO_SHOW" -> query.eq("noShow", true);
+                    case "EXTERNAL_UNFINISHED", "EXTERNAL_FINISHED" -> query.isNull("id"); // Deliberately force an empty result set
+                    default -> query.eq("exam.state", Exam.State.valueOf(state.get())).eq("noShow", false);
+                };
         }
 
         if (studentId.isPresent()) {
@@ -345,7 +351,7 @@ public class ReservationController extends BaseController {
                     .plusMinutes(ee.getExam().getDuration());
                 return eventEnd.isBefore(endDate);
             })
-            .collect(Collectors.toList());
+            .toList();
 
         final Result result = ok(enrolments);
 
@@ -372,15 +378,15 @@ public class ReservationController extends BaseController {
         Optional<String> externalRef,
         Http.Request request
     ) {
-        ExpressionList<Reservation> query = Ebean
+        ExpressionList<Reservation> query = DB
             .find(Reservation.class)
             .fetch("enrolment", "noShow, retrialPermitted")
             .fetch("user", "id, firstName, lastName, email, userIdentifier")
             .fetch("enrolment.exam", "id, name, state, trialCount, implementation")
             .fetch("enrolment.externalExam", "id, externalRef, finished")
             .fetch("enrolment.exam.course", "code")
-            .fetch("enrolment.exam.examOwners", "id, firstName, lastName", new FetchConfig().query())
-            .fetch("enrolment.exam.parent.examOwners", "id, firstName, lastName", new FetchConfig().query())
+            .fetch("enrolment.exam.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
+            .fetch("enrolment.exam.parent.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
             .fetch("enrolment.exam.examInspections.user", "id, firstName, lastName")
             .fetch("enrolment.exam.executionType", "type")
             .fetch("enrolment.collaborativeExam", "*")
@@ -413,21 +419,19 @@ public class ReservationController extends BaseController {
         }
 
         if (state.isPresent()) {
-            switch (state.get()) {
-                case "NO_SHOW":
-                    query = query.eq("enrolment.noShow", true);
-                    break;
-                case "EXTERNAL_UNFINISHED":
-                    query = query.isNotNull("externalUserRef").isNull("enrolment.externalExam.finished");
-                    break;
-                case "EXTERNAL_FINISHED":
-                    query = query.isNotNull("externalUserRef").isNotNull("enrolment.externalExam.finished");
-                    break;
-                default:
-                    query =
-                        query.eq("enrolment.exam.state", Exam.State.valueOf(state.get())).eq("enrolment.noShow", false);
-                    break;
-            }
+            query =
+                switch (state.get()) {
+                    case "NO_SHOW" -> query.eq("enrolment.noShow", true);
+                    case "EXTERNAL_UNFINISHED" -> query
+                        .isNotNull("externalUserRef")
+                        .isNull("enrolment.externalExam.finished");
+                    case "EXTERNAL_FINISHED" -> query
+                        .isNotNull("externalUserRef")
+                        .isNotNull("enrolment.externalExam.finished");
+                    default -> query
+                        .eq("enrolment.exam.state", Exam.State.valueOf(state.get()))
+                        .eq("enrolment.noShow", false);
+                };
         }
 
         if (studentId.isPresent()) {
